# rustycrab-model

./: Cargo.toml  README.md
src/: lib.rs
src/afk/: mod.rs
src/color/: mod.rs
src/music/: mod.rs
src/response/: auto_response.rs  bot_guild_config.rs  bot_guild_welcome.rs  bot_users.rs  bots.rs  discord_message.rs  guilds.rs  mod.rs  user.rs
src/response/logs/: action_log.rs  ignore.rs  mod.rs  setting.rs
src/response/ticket/: mod.rs  multipanel.rs  panel.rs  setting.rs  support_team.rs  ticket.rs
