[package]
name = "rustycrab-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
twilight-model = "0.15.4"
enum-primitive-derive = "0.3.0"
num-traits = "0.2.17"
csscolorparser = "0.6.2"
